fix logo and gap between navitem

--- a/src/styles/layout/header.scss
+++ b/src/styles/layout/header.scss
@@ -24,7 +24,7 @@
   border-bottom: 1px solid #fcfcfc;
   .logo-container {
     @include flex(row, center, center);
-    height: 90px;
+    height: 70px;
   }
   .logo {
     width: 200px;
